# CamFiQt

./: CMakeLists.txt  README.md
Examples/: CMakeLists.txt
Examples/CamFiExample/: CMakeLists.txt  main.cpp
Examples/CamFiGUIExample/: CMakeLists.txt  camfiqt_gui.cpp  camfiqt_gui.h  camfiqt_gui.qrc  camfiqt_gui.ui  main.cpp
GeneralLibs/websocketpp/processors/: hybi00.hpp  hybi13.hpp
Src/: CMakeLists.txt
Src/CamFiSocket/: CMakeLists.txt  CamFiSocket.cpp  CamFiSocket.h
Src/sioclient/: CMakeLists.txt  sio_socket.cpp  sio_socket.h
