PROJECT(CamFiExample)
STRING(TOUPPER ${PROJECT_NAME} PROJECT_NAME_CAPITALIZED)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)
ADD_DEFINITIONS(-DUNICODE)

# target_include_directories(${PROJECT_NAME} PRIVATE .
    # ../../Src/CamFiSocket
# )

FILE(GLOB_RECURSE HDRS_FILES *.h *.hpp)
FILE(GLOB_RECURSE SRCS_FILES *.cpp)

SET(FILES_TO_TRANSLATE ${FILES_TO_TRANSLATE} ${SRCS_FILES} ${HDRS_FILES} PARENT_SCOPE)

ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS_FILES} ${HDRS_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} CamFiSocket)