PROJECT(CamFiGUIExample)
STRING(TOUPPER ${PROJECT_NAME} PROJECT_NAME_CAPITALIZED)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)
ADD_DEFINITIONS(-DUNICODE)

# target_include_directories(${PROJECT_NAME} PRIVATE .
    # ../../Src/CamFiSocket
# )

FILE(GLOB_RECURSE HDRS_FILES *.h *.hpp)
FILE(GLOB_RECURSE SRCS_FILES *.cpp)
FILE(GLOB_RECURSE FORMS_FILES *.ui)
QT5_WRAP_UI(FORMS_HEADERS ${FORMS_FILES})
ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS_FILES} ${HDRS_FILES} ${FORMS_FILES} ${FORMS_HEADERS})

target_link_libraries(${PROJECT_NAME} ${Qt5Gui_LIBRARIES} ${Qt5Core_LIBRARIES} ${Qt5Widgets_LIBRARIES} ${Qt5MultiMedia_LIBRARIES} CamFiSocket)

#qt5_use_modules(${PROJECT_NAME} Gui Core)

#SET(FILES_TO_TRANSLATE ${FILES_TO_TRANSLATE} ${SRCS_FILES} ${HDRS_FILES} PARENT_SCOPE)